ISSUE: 663 DataEntry: style data entry form; PURPOSE: form wizard

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -880,6 +880,7 @@ a#showLeftPush.hiddenclass {
 	opacity: 1;
 	background-color: #3E6F7D;
 	color: white;
+	letter-spacing: .02rem;
 }
 /* Mark the steps that are finished and valid: */
 #regForm .step.finish {
