ISSUE: 663 DataEntry: style data entry form; PURPOSE: form wizard

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -885,6 +885,7 @@ a#showLeftPush.hiddenclass {
 /* Mark the steps that are finished and valid: */
 #regForm .step.finish {
 	background-color: #80ADCC;
+	background-color: #d3ebd8;
 	border: 1px solid green;
 }
 /*************************************/
