ISSUE 811: Named Groups page PURPOSE:  Cleaning up unused styles and making sure that alt text (caption) scrolls when it exceeds the limits of the player

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2465,6 +2465,18 @@ and also iPads specifically.
 		font-size: 0.8rem;
 		text-align: right;
 	}
+	.caption-lg {
+		overflow-y: scroll;
+		height: 4.75rem;
+		padding-left: 3px;
+		padding-right: 8px;
+	}
+	.caption-sm {
+		overflow-y: scroll;
+		height: 7rem;
+		padding-left: 3px;
+		padding-right: 8px;
+	}
 }
 @media screen and (min-width:576px) {
 	.card-columns {
