--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2265,6 +2265,12 @@ and also iPads specifically.
 	.containFlex4 {
 		column-count: 2;
 	}
+	.caption-sm {
+		overflow-y: scroll;
+		height: 5.75rem;
+		padding-left: 3px;
+		padding-right: 8px;
+	}
 }
 @media (min-width:1060px) and (max-width: 1459px) {
 	form#regForm.tab {
