ISSUE 811: Named Groups page PURPOSE:  Cleaning up unused styles and making sure that alt text (caption) scrolls when it exceeds the limits of the player

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2529,6 +2529,10 @@ and also iPads specifically.
 	.MediaAccordionShow {
 		display: block;
 	}
+	.caption-sm {
+		overflow-y: visible;
+		height: auto;
+	}
 }
 @media(max-width:576px) {
 	.count {
