--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2541,7 +2541,6 @@ and also iPads specifically.
 	.caption-sm {
 		overflow-y: visible;
 		height: auto;
-
 	}
 }
 @media screen and (max-width: 991px){
@@ -2577,7 +2576,7 @@ and also iPads specifically.
 		padding-right: 8px;
 	}
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
 	#map {
 		height: 600px;
 	}
