ISSUE 811: Named Groups page PURPOSE:  Cleaning up unused styles and making sure that alt text (caption) scrolls when it exceeds the limits of the player

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2551,7 +2551,7 @@ and also iPads specifically.
 		padding-right: 8px;
 	}
 }
-@media screen and (max-width: 1024px){
+@media screen and (min-width: 1024px){
 	.caption-lg {
 		overflow-y: scroll;
 		height: 4.75rem;
