Needs more padding.  changing .2px on agent page to .5rem;

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1024,7 +1024,7 @@ ul.list-unstyled li.list-group-item:last-child {
 }*/
 ul > li.list-group-item:nth-last-of-type(-n+1) {
 	border-bottom: none;
-	padding-bottom: 2px;
+	padding-bottom: .5rem;
 }
 .jqx-widget-header {
 	background-color: #deebec !important;
