ISSUE 811: Named Groups  PURPOSE: styles aren't being read for min-width 1800px.  Put it in both positions as test.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2609,5 +2609,16 @@ and also iPads specifically.
 		padding-right: 8px;
 	}
 }
+@media screen and (min-width: 1800px) {
+	.caption-sm {
+		overflow-y: visible;
+		height: 6rem;
+	}
+	.caption-lg {
+		overflow-y: visible;
+		height: 3.75rem;
+		line-height: auto;
+	}
+}
 
 /* styles above are media queries for named groups page*/
