--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2554,11 +2554,11 @@ and also iPads specifically.
 		height: 600px;
 	}
 	.caption-lg {
-		overflow-y: scroll;
+		overflow-y: auto;
 		height: 5rem;
 	}
 	.caption-sm {
-		overflow-y: scroll;
+		overflow-y: auto;
 		height: 6rem;
 		padding-left: 3px;
 		padding-right: 8px;
@@ -2569,11 +2569,11 @@ and also iPads specifically.
 		height: 600px;
 	}
 	.caption-sm {
-		overflow-y: scroll;
-		height: 7rem;
+		overflow-y: auto;
+		height: 8.5rem;
 	}
 	.caption-lg {
-		overflow-y: scroll;
+		overflow-y: auto;
 		height: 4.5rem;
 	}
 }
@@ -2582,11 +2582,11 @@ and also iPads specifically.
 		height: 600px;
 	}
 	.caption-lg {
-		overflow-y: scroll;
+		overflow-y: auto;
 		height: 5rem;
 	}
 	.caption-sm {
-		overflow-y: scroll;
+		overflow-y: auto;
 		height: 6rem;
 		padding-left: 3px;
 		padding-right: 8px;
@@ -2597,25 +2597,23 @@ and also iPads specifically.
 		height: 400px;
 	}
 	.caption-sm {
-		overflow-y: scroll;
 		height: 6rem;
 		padding-left: 3px;
 		padding-right: 8px;
 	}
 	.caption-lg {
-		overflow-y: visible;
 		height: 5rem;
 	}
 }
 @media screen and (max-width: 1024px){
 	.caption-lg {
-		overflow-y: scroll;
+
 		height: 4.75rem;
 		padding-left: 3px;
 		padding-right: 8px;
 	}
 	.caption-sm {
-		overflow-y: scroll;
+	
 		height: 7rem;
 		padding-left: 3px;
 		padding-right: 8px;
@@ -2623,11 +2621,11 @@ and also iPads specifically.
 }
 @media screen and (max-width: 991px){
 	.caption-lg {
-		overflow-y: scroll;
+		overflow-y: auto;
 		height: 5rem;
 	}
 	.caption-sm {
-		overflow-y: scroll;
+		overflow-y: auto;
 		height: 5.75rem;
 		padding-left: 3px;
 		padding-right: 8px;
