--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -10,6 +10,7 @@
 	border-color: #ced4da;
 	outline: 1px auto Highlight;
 	outline: 1px auto -webkit-focus-ring-color;
+	outline-color: rgba(0,123,255/25%);
 	box-shadow: 0 0 0 0.15rem rgb(0 123 255 / 25%);
 }
 .navbar-nav input:focus {
