--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -10,6 +10,12 @@
 	outline-color: rgba(0,123,255,.38);
 	box-shadow: 0 0 0 0.15rem rgb(0 123 255 / 25%);
 }
+.unfocus:focus {
+	border-color: transparent;
+	outline: 1px auto tranparent;
+	outline-color: transparent;
+	box-shadow: 0 0 0 0.15rem transparent;
+}
 .navbar-nav input:focus {
 	box-shadow:none;
 }
