--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -3,13 +3,13 @@
 /*:focus:not(:focus-visible) {
 	outline: 0;
 }*/
-:focus, .jqx-combobox-state-focus {
+:focus {
 	outline: 1px auto Highlight;
 	outline: 1px auto -webkit-focus-ring-color;
 	outline-color: rgba(0,123,255,.38);
 	box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
 }
-.unfocus:focus {
+.unfocus:focus, .jqx-combobox-state-focus {
 	outline: 1px auto tranparent!important;
 	outline-color: transparent!important;
 	box-shadow:none;
