--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -6,12 +6,11 @@
 :focus {
 	outline: 1px auto Highlight;
 	outline: 1px auto -webkit-focus-ring-color;
-	outline: none;
 	outline-color: rgba(0,123,255,.38);
 	box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
 }
-.unfocus:focus, .jqx-combobox-state-focus {
-	outline: 1px auto tranparent!important;
+.unfocus:focus {
+	outline: none;
 	outline-color: transparent!important;
 	box-shadow:none;
 }
