Style review and clean up; DESC: I made the focus more universal for accessibility but added a .unfocus: focus class to see if I can remove the focus on major sections
or blocks (in testing phase).

--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -14,9 +14,9 @@
 	outline-color: transparent!important;
 	box-shadow:none;
 }
-.jqx-combox-content:focus {
-	outline-color: rgba(0,123,255,.38);
-	box-shadow: none;
+#dropdownlistWrapperkeywordCollection:focus {
+	outline:green;
+	box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
 }
 .navbar-nav input:focus {
 	box-shadow:none;
