--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -9,11 +9,17 @@
 	outline-color: rgba(0,123,255,.38);
 	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 20%);
 }
+.jqx-combobox-content-focus {
+	border: none;
+	outline:none;
+	box-shadow:none;
+}
 .unfocus:focus {
 	outline: none;
 	outline-color: transparent!important;
 	box-shadow:none;
 }
+
 .navbar-nav input:focus {
 	box-shadow:none;
 }
