--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -9,7 +9,7 @@
 	outline-color: rgba(0,123,255,.38);
 	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 20%);
 }
-.jqx-combobox-content-focus {
+.jqx-combobox-content-focus, .jqx-fill-state-focus {
 	border: none;
 	outline:none;
 	box-shadow:none;
