--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -7,6 +7,7 @@
 	outline: 1px auto Highlight;
 	outline: 1px auto -webkit-focus-ring-color;
 	outline-color: rgba(0,123,255,.38);
+	outline: 1px solid #fff;
 	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 20%);
 }
 .jqx-combobox-content-focus, .jqx-fill-state-focus {
