Style review and clean up; DESC: I made the focus more universal for accessibility but added a .unfocus: focus class to see if I can remove the focus on major sections
or blocks (in testing phase).

--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -13,7 +13,7 @@
 .jqx-combobox-content-focus, .jqx-fill-state-focus {
 	border: none;
 	outline:none;
-	box-shadow:none;
+	box-shadow: 0 0 0 0.18rem buttonface;
 }
 .unfocus:focus {
 	outline: none;
