--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -7,13 +7,13 @@
 	outline: 1px auto Highlight;
 	outline: 1px auto -webkit-focus-ring-color;
 	outline-color: rgba(0,123,255,.38);
-	outline: 1px solid rgb(0 123 255 / 10%);
 	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 20%);
 }
 .jqx-combobox-content-focus, .jqx-fill-state-focus {
-	border: none;
-	outline:none;
-	box-shadow: 0 0 0 0.18rem buttonface;
+	outline: 1px auto Highlight;
+	outline: 1px auto -webkit-focus-ring-color;
+	outline-color: rgba(0,123,255,.38);
+	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 20%);
 }
 .unfocus:focus {
 	outline: none;
