Style review and clean up; DESC: I made the focus more universal for accessibility but added a .unfocus: focus class to see if I can remove the focus on major sections
or blocks (in testing phase).

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1024,7 +1024,8 @@ ul.list-unstyled li.list-group-item:last-child {
 }*/
 ul > li.list-group-item:nth-last-of-type(-n+1) {
 	border-bottom: none;
-	padding-bottom: .5rem;
+/*	padding-bottom: .5rem;*/
+	background-color:transparent;
 }
 .jqx-widget-header {
 	background-color: #deebec !important;
