Style review and clean up; DESC: I made the focus more universal for accessibility but added a .unfocus: focus class to see if I can remove the focus on major sections
or blocks (in testing phase).

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1009,6 +1009,7 @@ div#users-contain table td, div#users-contain table th {
 }
 .list-group-item {
 	border: none;
+	background-color: transparent;
 }
 ul.list-unstyled li.list-group-item {
 	margin-bottom: 0;
