--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1015,6 +1015,9 @@ ul.list-unstyled li.list-group-item {
 	margin-bottom: 0;
 	border-bottom: 1px solid #ccc;
 }
+ul.list-unstyled li.list-group-item a {
+	border-bottom: none;
+}
 ul.list-unstyled li.list-group-item:last-child {
 	margin-bottom: 0;
 	border-radius: 0;
