--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -4,9 +4,10 @@
 	outline: 0;
 }*/
 :focus {
-	outline: 1px auto Highlight;
-	outline: 1px auto -webkit-focus-ring-color;
-	outline-color: rgba(0,123,255,.38);
+/*	outline: 1px auto Highlight;
+	outline: 1px auto -webkit-focus-ring-color;*/
+	outline: 1px auto rgba(0,123,255,.38);
+/*	outline-color: rgba(0,123,255,.38);*/
 	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 20%);
 }
 .jqx-combobox-content-focus, .jqx-combo-state-focus, .btn-dark:focus {
