Style review and clean up; DESC: I made the focus more universal for accessibility but added a .unfocus: focus class to see if I can remove the focus on major sections
or blocks (in testing phase).

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -590,7 +590,7 @@ li.pid {
 	border-radius: 0;
 }
 .list-group-item {
-	padding: 0.25rem .5rem 0 .5rem;
+	padding: 0.25rem .5rem .22rem .5rem;
 }
 li.pid {
 	color: #666;
