--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -42,6 +42,7 @@ nav.navbar {  /* makes the navbar text slightly smaller than default and give pa
 }
 .dropdown-item {
 	font-size: .875rem;   /* makes the navbar text slightly smaller than default */
+	width: 99%; /* makes the outline stay in the column */
 }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
 	color: rgba(0,0,0,1)!important;  /* this makes the dropdown header darker then the rest of headers when a page within it is selected */
