--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -53,7 +53,7 @@ nav.navbar {  /* makes the navbar text slightly smaller than default and give pa
 	background-color:#deebec ;
 	color: black;
 }
-.navbar-nav .active>.nav-link {
+.navbar-nav>.nav-link .active {
 	color: green;
 	border-bottom: 1px solid green;
 }
